2016-09-16  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# lenet: move cudnn calls to cuda44.jl
	# karray: checkbounds without abstractarray.
	# document KnetArray inline.
	# remove importall Base.
	# implement more efficient lstm making sure getindex does a view (transpose?)
	# citation
	# write examples/README

	* TODO8:
	# document KnetArray in readme.
	# extend readme with examples. revise intro. publish intro on blog.
	# new amazon aws image
	# clean up old tags and register Knet
	# write paper for nips
	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	# try to measure back functions one by one as well for gpu profiling.
	# finish cudnn, curand etc. if possible eliminate dependence on them.
	# mnist2d: implement/test sparse arrays
	# for general arrays: broadcast, get/setindex, h/v/cat.
	# add back cpu convolution
	# implement axpy! for KnetArray if it is worth it to get faster updates.
	# charlm: profile speed, add dropout, nlayer.
	# add transpose to KnetArray.
	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat.

	* Release:

	Eliminated old tags.  Just tag one 0.7 and one 0.8 version.

	For each tagged version:
	- minimize REQUIRE
	- test on v0.4 v0.5 v0.6
	- test on cpu vs gpu

	julia 0.4 knet 0.7 cpu: ok
	julia 0.4 knet 0.7 gpu: fail: mnist4d,copyseq
	julia 0.4 knet 0.8 cpu: ok
	julia 0.4 knet 0.8 gpu: ok
	julia 0.4 autograd cpu: ok
	julia 0.4 autograd gpu: ok
	julia 0.5 knet 0.7 cpu: error
	julia 0.5 knet 0.7 gpu: error
	julia 0.5 knet 0.8 cpu: ok
	julia 0.5 knet 0.8 gpu: ok
	julia 0.5 autograd cpu: ok
	julia 0.5 autograd gpu: ok
	julia 0.6 knet 0.7 cpu: error
	julia 0.6 knet 0.7 gpu: error
	julia 0.6 knet 0.8 cpu: ok
	julia 0.6 knet 0.8 gpu: ok
	julia 0.6 autograd cpu: error, wip compat0.6, 0-dim array problem
	julia 0.6 autograd gpu: error, wip compat0.6

	julia 0.6 knet 0.8 cpu:
	using Knet